# smart_prodcut_intelligence_capstone

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  app.py  cli.py
notebooks/: 00_eda.ipynb  01_tabular_mlp.ipynb  02_vision_cnn_transfer.ipynb  03_text_embeddings.ipynb  04_transformers.ipynb  05_llm_rag_finetune.ipynb  06_diffusion.ipynb
reports/: milestone1_tabular_mlp_classification_report.csv  milestone1_tabular_mlp_metrics.csv  milestone2_vision_classification_report.csv  milestone2_vision_metrics.csv  milestone4_transformer_classification_report.csv  milestone4_transformer_comparison.csv  milestone4_transformer_metrics.csv  milestone5_llm_rag_finetune_summary.json  milestone5_rag_grounding_metrics.csv  milestone5_rag_qa_examples.csv  milestone5_sentence_selector_report.csv  milestone5_summary_examples.csv  milestone5_summary_model_comparison.csv  milestone6_diffusion_prompts.csv  milestone6_diffusion_summary.json  milestone6_generated_image_manifest.csv  tabular_mlp_model_comparison.csv  vision_model_comparison.csv
src/: __init__.py  data.py  models.py  utils.py
