[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-product-intelligence"
version = "0.1.0"
description = "Streamlit demo and notebooks for the Smart Product Intelligence capstone."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "streamlit>=1.35.0",
  "joblib>=1.3.0",
]

[project.scripts]
smart-product-intelligence = "app.cli:main"

[tool.setuptools]
packages = ["app", "src"]
